FleetManagementScreen overhal